# Operon-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/operon-guard/: action.yml
examples/: guardfile.yaml  operon_agent.py  operon_guardfile.yaml  simple_agent.py
integrations/nemoclaw/: README.md  nemoclaw-guard.sh  operon-guard-policy.yaml  pre_launch_guard.py
src/operon_guard/: __init__.py  cli.py
src/operon_guard/adapters/: __init__.py  autogen_adapter.py  base.py  crew_adapter.py  detect.py  langchain_adapter.py  openclaw_adapter.py
src/operon_guard/checks/: __init__.py  concurrency.py  determinism.py  latency.py  safety.py
src/operon_guard/core/: remediation.py  runner.py  scorer.py  spec.py
